overflow fixed

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -85,6 +85,7 @@ button[disabled] {
 .layout-content {
   display: flex;
   flex: 1;
+  overflow: auto;
 }
 
 .btn {
@@ -98,7 +99,7 @@ button[disabled] {
 .order-detail-title {
   background-color: #34495E;
   color: #95A5A6;
-  padding: 10px;
+  padding: 10px 0px 20px 15px;
 }
 
 .module-container {
