--- a/styles/orderDetailTemplate.css
+++ b/styles/orderDetailTemplate.css
@@ -26,6 +26,8 @@
 .order-header {
   background-color: #95A5A6;
   color: white;
+  padding: 10px;
+
 }
 
 .close-btn {
